Marking Tasks as Completed is finished.

--- a/to_do/templates/to_do_app/base.html
+++ b/to_do/templates/to_do_app/base.html
@@ -11,10 +11,10 @@
     {% else %}
         <title>To-Do App</title>
     {% endif %}
-    <!-- JQuery CDN -->
+    <!-- JQuery and AJAX CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Link to JavaScript File  -->
-    <script src="{% static 'to_do_app/script.js' %}"></script>
+    <script type="text/javascript" src="{% static 'to_do_app/script.js' %}"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- Link to Css File -->
     <link rel="stylesheet" type="text/css" href="{% static 'to_do_app/main.css' %}">
