--- a/to_do/static/to_do_app/main.css
+++ b/to_do/static/to_do_app/main.css
@@ -2,13 +2,18 @@ body {
 max-width: 100%;
 }
 
-#exampleCheck {
-	width: 31px;
-	height: 31px;
+.table td {
+    padding-left: 20px;
+}
+
+
+.form-check-input{
+	width: 28px;
+	height: 28px;
 }
 
 .form-control {
-	width: 125%;
+	max-width: 105%;
 }
 
 .button-row {
@@ -22,10 +27,16 @@ max-width: 100%;
 .main-header {
     /*background-color: #092e20;*/
     background-color: indigo;
-    maxwidth: 100%;
-    height: 100px;
+    max-width: 100%;
+    height: 80px;
     color: white;
-    padding: 22px;
+    padding: 14px;
+}
+
+.main-container {
+    text-align: center;
+    width: max-content;
+    max-width: fit-content;
 }
 
 .title-header {
@@ -34,4 +45,9 @@ max-width: 100%;
 
 .thead-green {
     background-color: #81b54e;
+}
+
+.completed_tasks {
+    text-decoration: line-through;
+    color: red;
 }
