--- a/to_do/templates/to_do_app/base.html
+++ b/to_do/templates/to_do_app/base.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <!-- Required meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <!-- Link to FontAwesome Icons CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     {% if title %}
         <title>To-Do App - {{ title }}</title>
     {% else %}
