--- a/to_do/templates/to_do_app/home.html
+++ b/to_do/templates/to_do_app/home.html
@@ -13,15 +13,15 @@
 	<tbody>
 	<tr>
 		<td colspan=4>
-		<button type="button" class="btn btn-success" id="add-new-row"><strong>Add New Task</strong></button>
+		<button type="button" class="btn btn-success" id="add-new-row" title="Add a New Task"><strong>Add New Task</strong></button>
 		</td>
 	</tr>
 	{% for task in tasks %}
 		{% if not task.is_checked %}
 		<tr>
 			<td><input type="checkbox" title="Mark as Done" class="form-check-input mark_as_done" id="{{ task.id }}"></td>
-			<td><h4 align="left" id="title{{ task.id }}">{{ task.task_title }} ({{ task.author }})</h4></td>
-			<td><button type="button" style="float: right;" class="btn btn-danger deleterow" title="Delete this task">Delete</button></td>
+			<td colspan="2"><h4 align="left" id="title{{ task.id }}">{{ task.task_title }} ({{ task.author }})</h4></td>
+			<td><button class="btn btn-side deleterow" title="Delete this Task" style="float: right;"><i class="fa fa-close"></i></button></td>
 		</tr>
 		{% endif %}
 	{% endfor %}
@@ -36,10 +36,15 @@
 		</th>
 	</thead>
 	<tbody>
+	<tr>
+		<td colspan=4>
+		<button type="button" class="btn btn-danger" id="clear_all_completed_tasks"><strong>Clear All Completed Tasks</strong></button>
+		</td>
+	</tr>
 	{% for task in tasks %}
 		{% if task.is_checked %}
 		<tr>
-			<td><input type="checkbox" title="Completed" class="form-check-input mark_as_undone" id="{{ task.id }}" checked></td>
+			<td><input type="checkbox" title="Mark as Undone" class="form-check-input mark_as_undone" id="{{ task.id }}" checked></td>
 			<td><h4 align="left" class="completed_tasks" id="title{{ task.id }}">{{ task.task_title }} ({{ task.author }})</h4></td>
 			<td class="button-row"></td>
 		</tr>
