--- a/to_do/static/to_do_app/main.css
+++ b/to_do/static/to_do_app/main.css
@@ -56,3 +56,11 @@ max-width: 100%;
   font-size: 18px;
   cursor: pointer;
 }
+
+.content-section {
+    align-content: center;
+    line-height: 1.5;
+    margin-top: 15px;
+    width: 45%;
+    max-width: 100%;
+}
