--- a/to_do/templates/to_do_app/tasks.html
+++ b/to_do/templates/to_do_app/tasks.html
@@ -1,7 +1,7 @@
 {% extends "to_do_app/base.html" %}
 {% block content %}
 
-<div class="container list-container">
+<div class="container" id="list-container">
 
 	<table class= "table table-hover" id="maintable">
 	<thead class="thead-dark">
