--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,5 +1,14 @@
 {% extends "to_do_app/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <h1>{{ user.username }}'s Profile</h1>
+<div class="content-section">
+  <div class="media">
+    <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+    <div class="media-body">
+      <h2 class="account-heading">{{ user.username }}</h2>
+      <p class="text-secondary">{{ user.email }}</p>
+    </div>
+  </div>
+  <!-- FORM HERE -->
+</div>
 {% endblock content %}
