--- a/to_do/templates/to_do_app/base.html
+++ b/to_do/templates/to_do_app/base.html
@@ -51,7 +51,7 @@
 </header>
 
 
-<main role="main" class="container main-container">
+<main role="main" class=" mt-6 container main-container">
     {% if messages %}
         {% for message in messages %}
             <div class="alert alert-{{ message.tags }}">
