--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -11,7 +11,7 @@
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Login</button>
+            <button class="btn btn-success" type="submit">Login</button>
         </div>
     </form>
     <div class="border-top pt-3">
