--- a/to_do/static/to_do_app/main.css
+++ b/to_do/static/to_do_app/main.css
@@ -1,7 +1,6 @@
 body {
     max-width: 100%;
     margin-top: 5rem;
-
 }
 
 .table td {
@@ -38,7 +37,6 @@ body {
     margin-top: 100px;
     padding: 10px 10px;
     margin-bottom: 20px;
-    
 }
 
 .title-header {
@@ -79,7 +77,7 @@ body {
 }
 
 .account-img {
-    width: 150px;    
+    width: 150px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -93,8 +91,11 @@ body {
     font-size: 20px;
 }
 
-
-table > table {
+table>table {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.content-section {
+    width: 80%;
+    margin: auto;
+}
