--- a/to_do/templates/to_do_app/base.html
+++ b/to_do/templates/to_do_app/base.html
@@ -39,9 +39,11 @@
 <body>
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-indigo fixed-top">
-
+            {% if user.is_authenticated %}
+            <a class="navbar-brand font-weight-bold" href="{% url 'tasks' %}" style="font-size: 38px;">To-Do App</a>
+            {% else %}
             <a class="navbar-brand font-weight-bold" href="{% url 'index' %}" style="font-size: 38px;">To-Do App</a>
-
+            {% endif %}
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -76,7 +78,7 @@
         </nav>
     </header>
 
-
+    <!-- Code for showing Flash Messages -->
     <main role="main" class=" mt-6 container main-container">
         {% if messages %}
         {% for message in messages %}
