--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,9 +2,9 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="content-section">
-  <div class="media border p-2">
-    <img class="m-2 mr-3 rounded-circle account-img" src="{{ user.profile.image.url }}">
-    <div class="media-body">
+  <div class="media border row p-2">
+    <img class="row-md-3 m-2 mr-3 rounded-circle account-img" src="{{ user.profile.image.url }}">
+    <div class="row-md-9 media-body">
       <h3 class="account-heading">{{ user.username }}</h3>
       <p class="text-secondary">{{ user.email }}</p>
     </div>
@@ -20,7 +20,9 @@
     </fieldset>
     <div class="form-group">
       <button class="btn btn-info" type="submit">Update</button>
+
     </div>
+
   </form>
 </div>
 {% endblock content %}
