--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -12,7 +12,7 @@
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Sign Up</button>
+            <button class="btn btn-warning" type="submit">Sign Up</button>
         </div>
     </form>
     <div class="border-top pt-3">
