Password Reset complete

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -12,6 +12,10 @@
         </fieldset>
         <div class="form-group">
             <button class="btn btn-success" type="submit">Login</button>
+            <small class="text-muted ml-2">
+                <a href="{% url 'password_reset' %}">Forgot Password</a>
+            </small>
+
         </div>
     </form>
     <div class="border-top pt-3">
