--- a/to_do/templates/to_do_app/tasks.html
+++ b/to_do/templates/to_do_app/tasks.html
@@ -26,11 +26,11 @@
 				</td>
 				<td>
 					<!--
-					<button class="btn btn-side update_btns" id="update_task_btn_{{ task.id }}" title="Update"
+					<button class="btn btn-side update_btns" id="update_task_btn_{{ task.id }}" title="Edit Task"
 						style="background-color:#1b73c7; display: none;"><i
 							class="fa fa-pencil-square-o"></i></button> -->
-					<i class="fa fa-pencil-square-o update_btns" title="Update" style='color:#0ba8c1;'></i>
-					<i class="fa fa-close deleterow delete_existing_row" title="Delete this Task"
+					<i class="fa fa-pencil-square-o update_btns" title="Edit Task" style='color:#0ba8c1;'></i>
+					<i class="fa fa-close deleterow delete_existing_row" title="Delete Task"
 						style='color:red; float:right;'></i>
 					<!--
 					<button class="btn btn-side deleterow delete_existing_row" title="Delete this Task"
