--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -7,8 +7,22 @@
     <div class="row-md-9 media-body">
       <h3 class="account-heading">{{ user.username }}</h3>
       <p class="text-secondary">{{ user.email }}</p>
-      <a href="{% url 'edit_profile' %}"><button class="btn btn-danger">Edit Profile</button></a>
     </div>
   </div>
+  <!-- FORM HERE -->
+  <form method="POST" enctype="multipart/form-data" class="mt-4">
+    {% csrf_token %}
+    <fieldset class="form-group">
+      <legend class="border-bottom mb-4">Profile Info</legend>
+      <!-- Uses Crispy Forms -->
+      {{ u_form|crispy }}
+      {{ p_form|crispy }}
+    </fieldset>
+    <div class="form-group">
+      <button class="btn btn-info" type="submit">Update</button>
+
+    </div>
+
+  </form>
 </div>
 {% endblock content %}
