Editing Tasks feature complete

--- a/to_do/templates/to_do_app/tasks.html
+++ b/to_do/templates/to_do_app/tasks.html
@@ -30,6 +30,7 @@
 						style="background-color:#1b73c7; display: none;"><i
 							class="fa fa-pencil-square-o"></i></button> -->
 					<i class="fa fa-pencil-square-o update_btns" title="Edit Task" style='color:#0ba8c1;'></i>
+					<i class="fa fa-check" id="update_task_btn" title="Update" style="color: green; display: none;"></i>
 					<i class="fa fa-close deleterow delete_existing_row" title="Delete Task"
 						style='color:red; float:right;'></i>
 					<!--
